2020-04-13  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pkl-diag.c (pkl_detailed_location): Do not use off64_t.

2020-04-13  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/ras: Fix ambiguous grouping in regexps.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pkl-insn.def: Do not use a white space between PKL_DEF_INSN
	and the open parenthesis in macro invocations, as a special case.
	Add explicative note.

2020-04-12  John Darrington <john@darrington.wattle.id.au>

	* doc/Makefile.am (nodelist): Change its directory.
	* testsuite/poke.repl/repl.exp (tab-completion-subcommand-2): New test.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/optcond-13.pk: New test.
	* testsuite/poke.pkl/optcond-14.pk: Likewise.
	* testsuite/poke.pkl/optcond-15.pk: Likewise.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.repl/repl.exp (tab-completion_type-1): New test.
	(tab-completion-var-1): Likewise.
	(tab-completion-fun-1): Likewise.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.repl/repl.exp (sigint-returns-to-prompt-2): New
	test.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.repl/repl.exp (slashes-are-preserved-1): Renamed
	from "slashes are preserved".
	(ctrl-c-returns-to-prompt-1): Remove.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/lib/poke.exp (poke_send_signal): New proc.
	* testsuite/poke.repl/repl.exp (sigint-returns-to-prompt): New
	test.
	* testsuite/poke.repl/repl.exp (ctrl-c-returns-to-prompt):
	Likewise.
	* HACKING (Writing REPL tests): Document poke_send_signal.

2020-04-12  John Darrington <john@darrington.wattle.id.au>

	* doc/poke.texi:  Don't capitalise or indent "Where ..."

2020-04-12  John Darrington <john@darrington.wattle.id.au>

	* src/pk-set.c (set_completion_function): Fix bug which was
	exposed by recent test: tab-completion-subcommand-1.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>
